--- a/quiz.css
+++ b/quiz.css
@@ -1,3 +1,11 @@
 .card {
+  display: inline-block;
   width: 30%;
+  margin: 1.5% 1.5%;
+}
+
+.productImg {
+  height: 200px;
+  max-width: 100%;
+  margin: 0 auto;
 }
