--- a/quiz.css
+++ b/quiz.css
@@ -1,3 +1,11 @@
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
 nav li {
   list-style-type: none;
   display: inline-block;
@@ -11,7 +19,9 @@ nav a {
 #title {
   text-align: center;
   font-family: 'Galada', cursive;
-  font-size: 2em;
+  font-size: 3em;
+  color: #902D7D;
+  margin: 0;
 }
 
 .card {
@@ -26,33 +36,49 @@ nav a {
   max-width: 100%;
 }
 .availability {
-  text-align: center;
   color: yellow;
   background-color: #555;
 }
 
 .productName {
-  position: relative;
-  top: 0px;
-  left: 0px;
   border: dotted lightgrey 1px;
   text-align: center;
-  width: 85%;
-  margin: 3% auto;
-  padding: 3%;
+  margin: 0;
+  padding: 15px;
 }
 
 .description {
   text-align: justify;
   padding: 5%;
+  font-size: .9em;
 }
 
-.specifications p, 
-.pricing,
-.quantityPricing {
-  padding: 2% 5%;
+.specifications {
+  margin: 15px 0 0 15px;
+  font-size: 1.25em;
+  font-weight: normal;
 }
 
 .pricing {
-  font-weight: bold;
+  margin: 0 0 0 15px;
+  font-size: 1.25em;
+  font-weight: normal;
 }
+
+.size,
+.weight,
+.quantityPricing {
+  margin: 0 0 0 40px;
+  font-weight: bolder;
+  font-size: .9em;
+}
+
+.quantityPricing:nth-of-type(3) {
+  margin-bottom: 30px;
+}
+
+.specs {
+  font-size: .6em;
+  margin: 4px 0 0 0;
+}
+
