--- a/quiz.css
+++ b/quiz.css
@@ -24,6 +24,10 @@ nav a {
   margin: 0;
 }
 
+.about p {
+  padding: 15px;
+}
+
 .card {
   display: inline-block;
   width: 30%;
@@ -34,10 +38,16 @@ nav a {
 .productImg {
   height: 200px;
   max-width: 100%;
+  margin: 20px 20% 0 20%;
 }
+
 .availability {
   color: yellow;
-  background-color: #555;
+  background-color: #888;
+}
+
+.availability p{
+  padding: 3px;
 }
 
 .productName {
@@ -45,12 +55,14 @@ nav a {
   text-align: center;
   margin: 0;
   padding: 15px;
+  height: 90px;
 }
 
 .description {
   text-align: justify;
   padding: 5%;
   font-size: .9em;
+  height: 250px;
 }
 
 .specifications {
@@ -74,7 +86,7 @@ nav a {
 }
 
 .quantityPricing:nth-of-type(3) {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 .specs {
